--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 welcome to the united states of america 
 this is nemath working as a devops engineer
 from chicago
-suburb-naperville
+suburb-naperville  IT
 
 jazakallah
 
