--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-welcome to the united states of america 
-this is nemath working as a devops engineer
-from chicago
-suburb-naperville  IT
-project1
-
-jazakallah
-
+welcome to india
